Add Last.fm endpoints
